2021-01-13  Karl Berry  <karl@freefriends.org>

	* cr-do-issue: new script to handle the overall crossref process
	for both issue.xml and landing pages.
	* Makefile (crossref_iss): separate from testiss and lastiss.
	(cr_*): rename working directories to crossref/dirN.DESC.
	(crl, cro): new convenience targets for running cr-do-issue.
	Remove previous drafts of crossref processing.
	* capcrossref.pl (crossref_create_landing_page): wording.
	* cr-copy-bbl-abs: handle abstracts, better reporting.
	* cr-landing-bbl-abs: better reporting.
	(update_landing_abs): new fn, handle abstracts via ltx2unitxt.
	(system_mv): new fn to run mv.

2021-01-02  Karl Berry  <karl@freefriends.org>

	* Makefile (cr_temp, cr_process): change names to dir1.auto
	and dir2.process, to hopefully clarify use and ordering.
	* capcrossref.pl (crossref_write_files): use $::OPT{crossref},
	not hardwiring crossref/rpi.

2021-01-01  Karl Berry  <karl@freefriends.org>

	Insert bibliographies into landing pages.
	* Makefile (crbat): new target for testing landing page updates.
	(cr1): further steps toward whole process.
	* capcrossref.pl (crossref_create_landing_page): fiddle with
	subtitles for beet, allow for empty summary (election).
	* cr-landing-bbl-abs: initial code to replace bbl
	placeholders with reference lists from the crossref xml.

2020-12-30  Karl Berry  <karl@freefriends.org>

	* capaccum-author.pl (find_authors): forgot to push author name on
	list.
	* capaccum-util.pl (lists_entry_trailer): no final newline,
	done in succeeding output.
	* lists-unifications.txt (TUGboat editors): same as TUGboat Team.

2020-12-29  Karl Berry  <karl@freefriends.org>

	crossref: initial creation of landing pages.

	* Makefile (cr_temp, cr_process): variables for crossref processing.
	(cr1): rework to avoid hardwiring directory names. Make landing pages.
	* captub: have --crossref option take argument, the directory
	in which to generate files.
	