@@ -28,8 +28,6 @@ sub LaTeX_ToUnicode_convert_hook {
   $string =~ s/\\[hv]fill?$endcw//g;
   $string =~ s/\\[hv]filneg$endcw//g;
   $string =~ s/\\[hv]ss$endcw//g;
-  $string =~ s/\\break$endcw/ /g;
-  $string =~ s/\\newline$endcw/ /g;
 
   $string =~ s/\\(app|cls|field|pkg|sty)$endcw//g; # talbot
 
@@ -41,14 +39,22 @@ sub LaTeX_ToUnicode_convert_hook {
   $string =~ s/\\BibLaTeX$endcw/BibLaTeX/g;
   $string =~ s/\\BibTeX$endcw/BibTeX/g;
   $string =~ s/\\CTAN$endcw/CTAN/g;
-  $string =~ s/\\dash$endcw/\\x{2013}/g; # en dash
   $string =~ s/\\Dash$endcw/\\x{2014}/g; # em dash
-  $string =~ s/\\epTeX$endcw/epTeX/g;
+  $string =~ s/\\GNU$endcw/GNU/g;
+  $string =~ s/\\LuaTeX$endcw/LuaTeX/g;
+  $string =~ s/\\OpTeX$endcw/OpTeX/g;
   $string =~ s/\\PDF$endcw/PDF/g;
+  $string =~ s/\\TUB$endcw/TUGboat/g;
+  $string =~ s/\\XeTeX$endcw/XeTeX/g;
+  #
+  $string =~ s/\\break$endcw/ /g;
+  $string =~ s/\\cs$endcw/\\x{005c}/g;
+  $string =~ s/\\dash$endcw/\\x{2013}/g; # en dash
+  $string =~ s/\\epTeX$endcw/epTeX/g;
+  $string =~ s/\\newline$endcw/ /g;
   $string =~ s/\\pTeX$endcw/pTeX/g;
   $string =~ s/\\pdftex$endcw/pdfTeX/g;
   $string =~ s/\\tbUTF$endcw/UTF/g;
-  $string =~ s/\\TUB$endcw/TUGboat/g;
   $string =~ s/\\upTeX$endcw/upTeX/g;
   
   $string =~ s,\\(begin|end)$endcw\{abstract\}\s*,,g;
