@@ -1,3 +1,8 @@
+2021-01-20  Karl Berry  <karl@freefriends.org>
+
+	* ltx2crossrefxml-tugboat.cfg (\cs, \GNU, \OpTeX): handle.
+	* README-landing.txt: wording.
+
 2021-01-13  Karl Berry  <karl@freefriends.org>
 
 	* Makefile: rename directories.
